tests/checker/bad/constraint_locals_not_in_scope.scilla
scilla_version 0

library Constraint

contract Constraint()
with
  let x = True in
  x
=>

field f : Bool = x

transition T ()
  y = x
end